--- a/index.html
+++ b/index.html
@@ -3,12 +3,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/8c25178190.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Form Validation</title>
     <link rel="icon" type="image/x-icon" href="form.png"/>
 </head>
 <body> 
+    <div class="container">
+        <h1>Sign Up Today!</h1>
+        <!-- Form -->
+        <form id="form">
+            <!-- Full Name -->
+            <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" id="name" placeholder="Full Name">
+            </div>
+            <!-- Phone Number -->
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" placeholder="5555 555 555">
+            </div>
+            <!-- Email -->
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" placeholder="email@address.com">
+            </div>
+            <!-- Website URL -->
+            <div class="form-group">
+                <label for="website">Website Address</label>
+                <input type="url" id="website" placeholder="https://luaru.com.au">
+            </div>
+            <!-- Password -->
+            <div class="form-group">
+                <label for="password1">Password</label>
+                <input type="password" id="password1" placeholder="Create Password">
+            </div>
+            <!-- Confirm Password -->
+            <div class="form-group">
+                <label for="password2"> Confirm Password</label>
+                <input type="password" id="password2" placeholder="Confirm Password">
+            </div>
+            <!-- Button -->
+            <button type="submit">Register</button>
+        </form>
+        <!-- Error/Success message -->
+        <div class="message-container">
+            <h3 id="message">Don't Hesitate!</h3>
+        </div>
+    </div>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
