--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
             <!-- Password -->
             <div class="form-group">
                 <label for="password1">Password</label>
-                <input type="password" id="password1" placeholder="Create Password"
-                        required>
+                <input type="password" id="password1" placeholder="Create Password (Min. 8 Characters)"
+                        required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+                        title="Please include at least 1 uppercase character, 1 lowercase character, and 1 number">
             </div>
             <!-- Confirm Password -->
             <div class="form-group">
                 <label for="password2"> Confirm Password</label>
-                <input type="password" id="password2" placeholder="Confirm Password">
+                <input type="password" id="password2" placeholder="Confirm Password"
+                        required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$">
             </div>
             <!-- Button -->
             <button type="submit">Register</button>
