--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://meilune.github.io/form-validation/style.css">
     <title>Form Validation</title>
-    <link rel="icon" type="image/x-icon" href="form.png"/>
+    <link rel="icon" type="image/x-icon" href="https://meilune.github.io/form-validation/form.png"/>
 </head>
 <body> 
     <div class="container">
@@ -21,7 +21,7 @@
             <!-- Phone Number -->
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" placeholder="5555 555 555" name="phone"
+                <input type="tel" id="phone" placeholder="4444 444 444" name="phone"
                         required pattern="^[0-9-+\s()]*$" minlength="6" maxlength="28">
             </div>
             <!-- Email -->
@@ -57,6 +57,6 @@
             <h3 id="message">Don't Hesitate!</h3>
         </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="https://meilune.github.io/form-validation/app.js"></script>
 </body>
 </html>
